Fixes logo title alignment.

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ section {
 }
 
 /* Header */
-header .logo {
+header {
 	text-align: center;
 }
 
